dirtbike-specialist/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dirtbike-specialist
  labels:
    app: dirtbike-specialist
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: dirtbike-specialist
  template:
    metadata:
      annotations:
        config-revision: "2026-08-23-real-client-ip"
      labels:
        app: dirtbike-specialist
    spec:
      containers:
        - name: dirtbike-specialist
          image: prodacr1234.azurecr.io/dirtbike-specialist:main-c0dca6f
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1Gi
