dirtbike-specialist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dirtbike-specialist
spec:
  selector:
    app: dirtbike-specialist
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
